@@ -41,13 +41,16 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   * Extend the documentation of apt-setup, especially the decision whether or
     not to use a network mirror. Document selection of services.
   * Document new apt-setup/services-select and related hostname preseeds.
+  * Add some information about creating device files in the appendix on chroot
+    installs; also add a note that the appendix only covers the basic steps
+    of a chroot install.
 
   [ Joey Hess ]
   * Document how to preseed partman-auto to use only available disk, no matter
     what it's name is.
   * debian/rules: call dh_md5sums.
 
- -- Frans Pop <fjp@debian.org>  Sat, 20 Oct 2007 20:52:43 +0200
+ -- Frans Pop <fjp@debian.org>  Sun, 21 Oct 2007 15:14:48 +0200
 
 installation-guide (20070319) unstable; urgency=low
 
